# frame

./: .gitignore  LICENSE  README.md
cad/stl/: d421_bracket.stl  hex_pillar_long.stl  hex_pillar_orig.stl  top_plate_real.stl
docker/: Dockerfile.aarch64.ros2_humble.frame
gst_recording_daemon/: CMakeLists.txt  README.md
gst_recording_daemon/src/: ControlServer.cpp  ControlServer.h  GstRecorder.cpp  GstRecorder.h  Protocol.cpp  Protocol.h  RecorderDaemon.cpp  RecorderDaemon.h  main.cpp
overlays/: realsense_d421.yaml
overlays/isaac_ros_common/: .isaac_ros_common-config  .isaac_ros_dev-dockerargs
patches/isaac_ros_common/: 0001-Frame-extend-dev-container-run_dev-improvements.patch
ros2_ws/: Dockerfile.realsense  README.md  build_install_follow.sh  display_image.sh  install_ros_hotspot.sh  run_follow.sh
ros2_ws/docker/: Dockerfile.operator  ros2_docker.sh  ros2_docker_full.sh
ros2_ws/scripts/: docker_viewer.sh  install_nikon_blacklist_udev.sh  nikon_usb_recover.sh  operator_container.sh  operator_teleop_view.sh  run_frame_bringup.sh  start_mtplvcap_d3500.sh  teleop_frame.sh
ros2_ws/src/dancer_detector/: package.xml  setup.cfg  setup.py
ros2_ws/src/dancer_detector/dancer_detector/: centroid_to_centerdepth.py  dancer_seg_node.py  person_follower_pid.py  uart_seg_toggle.py  yolo_ir_realsense_node.py
ros2_ws/src/dancer_detector/dancer_detector/common/: rs_depth_utils.py  uvc_depth_utils.py
ros2_ws/src/dancer_detector/launch/: follow_person.launch.py  follow_person_yolo.launch.py  follow_yolo.launch.py
ros2_ws/src/frame_bringup/: package.xml  setup.py
ros2_ws/src/frame_bringup/config/: teleop_twist_joy_xbox.yaml  velocity_smoother.yaml
ros2_ws/src/frame_bringup/frame_bringup/: joy_record_toggle_node.py  recording_utils.py
ros2_ws/src/frame_bringup/launch/: frame_all.launch.py  frame_all_stream_only.launch.py  frame_all_stream_only_usb.launch.py  teleop_only.launch.py
ros2_ws/src/frame_bringup/resource/: frame_bringup
ros2_ws/src/frame_servo_control/: package.xml  setup.py
ros2_ws/src/frame_servo_control/config/: dual_servo_control.yaml
ros2_ws/src/frame_servo_control/frame_servo_control/: dual_servo_control_node.py  dual_servo_joy_node.py
ros2_ws/src/frame_servo_control/resource/: frame_servo_control
ros2_ws/src/frame_servo_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/frame_servo_interfaces/srv/: SetServoAngle.srv
ros2_ws/src/ir_to_rgb_remap/: CMakeLists.txt  ir_to_rgb_remap_plugin.xml  package.xml
ros2_ws/src/ir_to_rgb_remap/launch/: d421_ir_launch.py  d421_launch.py  isaac_ros_yolo_launch.py  isaacyolo.launch.py  yolov8_core_ir_wrapper.launch.py
ros2_ws/src/ir_to_rgb_remap/src/: ir_to_rgb_remap_component.cpp  ir_to_rgb_remap_node.cpp
ros2_ws/src/nikon_mtplv/: package.xml  setup.py
ros2_ws/src/nikon_mtplv/launch/: nikon_mtplv.launch.py
ros2_ws/src/nikon_mtplv/nikon_mtplv/: mtplvcap_stream_node.py
ros2_ws/src/nikon_mtplv/scripts/: nikon_usb_recover.sh  start_mtplvcap_d3500.sh
ros2_ws/src/usb_cam_stream/: package.xml  setup.py
ros2_ws/src/usb_cam_stream/usb_cam_stream/: ffmpeg_writer.py  gstreamer_writer.py  usb_cam_stream_node.py
tools/: depth_camera_base.py  depth_centroid.py  depth_realsense_py_test.py  depth_segmentation_base.py  detect_person.py  detect_person_realsense_tiny.py  dual_servo_sweep.py  dual_servo_sysfs.py  dual_servo_sysfs_clean.py  gesture_sign.py  pwm_test.py  pwm_test2.py  requirements.txt  simple_pwm.py  sysfs_pwm_test.py  test.py  uart_listen.py
tools/common/: __init__.py  segmentation_utils.py
web/: README.md  app.py  package-lock.json  package.json
web/js/: utils.js  utils.test.js
web/templates/: index.html
