<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frame_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files and utilities for Frame robot deployments.</description>
  <maintainer email="frame@todo.todo">frame</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
